# rust-ray-tracer

./: Cargo.toml  README.md
src/: camera.rs  light.rs  main.rs  material.rs  math.rs  scene.rs
src/hittables/: hittable.rs  mod.rs  plane.rs  sphere.rs
