[package]
name = "raytracer"
version = "0.1.0"
authors = ["Joseph Sullivan <josephsullivan256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"
nalgebra = "0.18"
rand = "0.7.3"
rayon = "1.1"